--- a/public/style.css
+++ b/public/style.css
@@ -4,17 +4,83 @@
   align-items: center;
 }
 
+.map {
+  margin: 20px 0;
+}
+
+.map canvas {
+  width: 580px;
+  height: 200px;
+}
+
 .game {
+  width: 580px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gameStateButton {
+  width: 70px;
+  margin: 10px;
+}
+
+.gameStateButton button {
+  width: 70px;
 }
 
 .gameMain {
+  width: 100%;
+  height: 210px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .pastGuesses {
+  width: 280px;
+  display: grid;
+  grid-template-columns: 1fr 80px 45px;
+  align-content: start;
+  line-height: 20px;
+}
+.pastGuesses div {
+  padding: 5px 0 5px 10px;
+  line-height: 20px;
+  height: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.pastGuesses div:nth-child(6n+1), .pastGuesses div:nth-child(6n+2), .pastGuesses div:nth-child(6n+3) {
+  background-color: #ddd;
 }
 
 .playArea {
+  width: 280px;
+  background-color: #ddd
+}
+
+.playArea button {
+  width: 60px;
+  height: 26px;
+}
+
+.playArea input {
+  width: 212px;
+  line-height: 20px;
+}
+
+.possibleGuesses {
+  height: 184px;
+  overflow: scroll;
+}
+
+.possibleGuesses div {
+  padding: 2px 10px;
+  border-bottom: 2px solid white;
+}
+
+.gameFinished {
+  margin: 10px;
 }
